--- a/email_openers.ipynb
+++ b/email_openers.ipynb
@@ -11,7 +11,7 @@
     "import ast\n",
     "headers = {\n",
     "  'Content-Type': 'application/json',\n",
-    "  'Authorization': 'Basic U0VBXGFub29wLmd1cHRhOkV1Y2xvaWQjMQ=='#got the apikey using postman--->convert to python method\n",
+    "  'Authorization': 'Basic ##########################'#got the apikey using postman--->convert to python method\n",
     "}"
    ]
   },
