--- a/campaign_analysis.ipynb
+++ b/campaign_analysis.ipynb
@@ -47,7 +47,7 @@
    "outputs": [],
    "source": [
     "def api():\n",
-    "  url=\"https://secure.p03.eloqua.com/api/bulk/2.0/activities/exports\"#setting the url for bulk\n",
+    "  url=\"https://secure.p03.eloqua.com/api/bulk/2.0/activities/exports\"\n",
     "  payload={#filter \n",
     "  \"filter\": \"'{{Activity.Type}}'= 'EmailOpen' AND '{{Activity.CreatedAt}}'>= '2023-09-01' AND '{{Activity.CreatedAt}}'<='2023-10-01'\",\n",
     "  \"name\": \"api export\",\n",
@@ -56,23 +56,23 @@
     "    \"ActivityDate\": \"{{Activity.CreatedAt}}\",\n",
     "    }\n",
     "  }\n",
-    "#Setting the filter for EmailOpens for given date range\n",
-    "  response = requests.request(\"POST\" , url, headers=headers, data=json.dumps(payload))#Save the uri field value for the next step\n",
+    "\n",
+    "  response = requests.request(\"POST\" , url, headers=headers, data=json.dumps(payload))\n",
     "  dict1= ast.literal_eval(response.text)\n",
-    "  sync1=dict1[\"uri\"] #sync1 looks like: /activities/exports/26331 \n",
+    "  sync1=dict1[\"uri\"]\n",
     "  url = \"https://secure.p03.eloqua.com/API/bulk/2.0/syncs\"\n",
     "  payload = json.dumps({\n",
     "  \"syncedInstanceUri\": sync1\n",
     "  })\n",
     "  response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
     "  dict2= ast.literal_eval(response.text)\n",
-    "  sync2=dict2[\"uri\"] #The response will include a status parameter, creation metadata, and the sync uri\n",
-    "  while ('\"status\":\"success\"'not in response.text): #wait for the sync to complete and status=="success"\n",
+    "  sync2=dict2[\"uri\"]\n",
+    "  while ('\"status\":\"success\"'not in response.text):\n",
     "    url = f\"https://secure.p03.eloqua.com/API/bulk/2.0{sync2}\"\n",
     "    payload = {}\n",
     "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
     "  \n",
-    "  return(sync2) #return this sync to api2 function eg. /bulk/2.0/syncs/52524"
+    "  return(sync2)"
    ]
   },
   {
