--- a/email_openers.ipynb
+++ b/email_openers.ipynb
@@ -21,6 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Since the limit for items is 50000,load the entire data by applying offsets and return the bulk\n",
     "def api2(sync23):\n",
     "  dict=[]\n",
     "  url = f\"https://secure.p03.eloqua.com/API/bulk/2.0{sync23}/data?limit=50000\"\n",
@@ -48,7 +49,7 @@
    "source": [
     "def api():\n",
     "  url=\"https://secure.p03.eloqua.com/api/bulk/2.0/activities/exports\"\n",
-    "  payload={#filter \n",
+    "  payload={#filter on emailopen with intended time frame\n",
     "  \"filter\": \"'{{Activity.Type}}'= 'EmailOpen' AND '{{Activity.CreatedAt}}'>= '2023-09-01' AND '{{Activity.CreatedAt}}'<='2023-10-01'\",\n",
     "  \"name\": \"api export\",\n",
     "  \"fields\": {\n",
@@ -59,20 +60,20 @@
     "\n",
     "  response = requests.request(\"POST\" , url, headers=headers, data=json.dumps(payload))\n",
     "  dict1= ast.literal_eval(response.text)\n",
-    "  sync1=dict1[\"uri\"]\n",
+    "  sync1=dict1[\"uri\"] #create sync1 for setting payload for next post req\n",
     "  url = \"https://secure.p03.eloqua.com/API/bulk/2.0/syncs\"\n",
     "  payload = json.dumps({\n",
     "  \"syncedInstanceUri\": sync1\n",
     "  })\n",
     "  response = requests.request(\"POST\", url, headers=headers, data=payload)\n",
     "  dict2= ast.literal_eval(response.text)\n",
-    "  sync2=dict2[\"uri\"]\n",
+    "  sync2=dict2[\"uri\"] #This final sync will be used in the url for get request\n",
     "  while ('\"status\":\"success\"'not in response.text):\n",
     "    url = f\"https://secure.p03.eloqua.com/API/bulk/2.0{sync2}\"\n",
     "    payload = {}\n",
     "    response = requests.request(\"GET\", url, headers=headers, data=payload)\n",
     "  \n",
-    "  return(sync2)"
+    "  return(sync2)#return the sync to api2 func"
    ]
   },
   {
@@ -93,6 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#defining unique mail openers with minimum open date in the given time frame\n",
     "unique_emails = {}\n",
     "for email, date in trans:\n",
     "    if email not in unique_emails or date < unique_emails[email]:\n",
@@ -108,6 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#writing the data to csv file\n",
     "import csv\n",
     "filename = 'openers_sept23.csv'\n",
     "with open(filename, 'w', newline='') as file:\n",
