--- a/CRM_analysis.ipynb
+++ b/CRM_analysis.ipynb
@@ -21,7 +21,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def api(actype,campname,aid): #the function takes activitype,campaign name and asset id to filter the required results\n",
+    "#Get activitype,campaign name and asset id to filter the required results, create the sync on bulk and return json file\n",
+    "def api(actype,campname,aid): \n",
     "  url=\"https://secure.p03.eloqua.com/api/bulk/2.0/activities/exports\"\n",
     "  payload={\n",
     "  \"filter\": \"'{{Activity.Type}}'= '\"+str(actype)+\"' AND '{{Activity.Campaign.Field(CampaignName)}}'= '\"+str(campname)+\"' AND '{{Activity.Asset.Id}}'='\"+str(aid)+\"'\",\n",
@@ -127,6 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Feed the data into csv files\n",
     "import csv\n",
     "filename = 'output_file.csv'\n",
     "with open(filename, 'w', newline='') as file:\n",
