--- a/email_openers.ipynb
+++ b/email_openers.ipynb
@@ -47,6 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Function to set the filters for exporting activity and returning the sync number to be used in get request in api2\n",
     "def api():\n",
     "  url=\"https://secure.p03.eloqua.com/api/bulk/2.0/activities/exports\"\n",
     "  payload={#filter on emailopen with intended time frame\n",
