--- a/CRM_analysis.ipynb
+++ b/CRM_analysis.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Getting all email groups belonging to the camnpaign\n",
+    "#Getting all email groups belonging to the campaign\n",
     "def assets(cname):\n",
     "    url=f\"https://secure.p03.eloqua.com/api/rest/2.0/assets/campaigns?depth=complete&search=name='{cname}'\"\n",
     "    payload={}\n",
